# chiralipy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
benchmarks/: bench_brics.py
chiralipy/: __init__.py  canon.py  elements.py  exceptions.py  parser.py  types.py  writer.py
chiralipy/decompose/: __init__.py  brics.py  murcko.py
chiralipy/match/: __init__.py  substructure.py
chiralipy/rings/: __init__.py  detection.py
chiralipy/transform/: __init__.py  aromaticity.py  hydrogen.py  kekulize.py
chirpy/: __init__.py  aromaticity.py  brics.py  canon.py  elements.py  exceptions.py  hydrogen.py  kekulization.py  match.py  parser.py  rings.py  types.py  writer.py
chirpy/decompose/: __init__.py  brics.py  murcko.py
chirpy/match/: __init__.py  substructure.py
chirpy/rings/: __init__.py  detection.py
chirpy/transform/: __init__.py  aromaticity.py  hydrogen.py  kekulize.py
tests/: __init__.py  conftest.py  test_aromaticity.py  test_brics.py  test_canonical.py  test_coverage.py  test_elements.py  test_hydrogen.py  test_kekulize.py  test_match.py  test_murcko.py  test_parser.py  test_smarts.py
